--- a/.github/workflows/veriables-workflow.yml
+++ b/.github/workflows/veriables-workflow.yml
@@ -1,14 +1,14 @@
 name: Variables demo
-run-name: Testing env variable
+run-name: Testing env & configuration variables
 
 on: [push]
 
 env:
-  owner_name: Vinitha
+  owner_name: Abhi
+  my_repo_var_value: ${{ vars.MY_REPO_VAR }}
 
 jobs:
   use_env_var:
     runs-on: ubuntu-latest
     steps:
-      - run: echo "Job use_env_vars execution - from $owner_name"
-
+      - run: echo "Job use_env_vars execution - from $owner_name - with repo variable value = $my_repo_var_value"
