--- a/.github/workflows/events-workflow.yml
+++ b/.github/workflows/events-workflow.yml
@@ -1,3 +1,5 @@
+name: Event based workflow execution
+
 on:
   push:
     branches:
@@ -10,7 +12,12 @@ on:
       - main
 
 jobs:
+  reuse_job:
+    uses: ./.github/workflows/reuseme.yml
+
   main_job:
     runs-on: ubuntu-latest
     steps:
       - run: echo "----TRIGGERED the main branch workflow - event based-----"
+
+
