--- a/.github/workflows/veriables-workflow.yml
+++ b/.github/workflows/veriables-workflow.yml
@@ -6,9 +6,13 @@ on: [push]
 env:
   owner_name: Abhi
   my_repo_var_value: ${{ vars.MY_REPO_VAR }}
+  my_secret_var_value: ${{ secrets.MY_SECRET }}
 
 jobs:
   use_env_var:
     runs-on: ubuntu-latest
     steps:
       - run: echo "Job use_env_vars execution - from $owner_name - with repo variable value = $my_repo_var_value"
+      - run: echo "My secret data -> $my_secret_var_value"
+
+
